--- a/KhTracker/OneHourDictionary - Copy.xaml
+++ b/KhTracker/OneHourDictionary - Copy.xaml
@@ -2603,7 +2603,7 @@
             <RowDefinition/>
             <RowDefinition Height="0.3*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Row="0" Source="Images\Grid\Progression\Old\pride_lands\hyenas.png"/>
+        <Image Grid.Row="0" Source="Images\Grid\Progression\Old\pride_lands\timon_and_pumba.png"/>
         <Rectangle Fill="#D81E1E1E" Panel.ZIndex="-1" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Stretch="UniformToFill"/>
         <Viewbox Grid.Row="1" Margin="10,0,10,0">
             <local:OutlinedTextBlock FontFamily="pack://application:,,,/Fonts/#KHMenu" FontSize="15" StrokeThickness="3" Text="10 Points" Fill="{StaticResource Banner_Gold}"/>
