--- a/KhTracker/Windows/ObjectivesWindow.xaml
+++ b/KhTracker/Windows/ObjectivesWindow.xaml
@@ -40,6 +40,8 @@
                 <MenuItem Header="Simple Icon Style"  Click="ObjTelevoIconsToggle"     x:Name="ObjTelevoIconsOption"      IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Game Icons Style"   Click="ObjSonicIconsToggle"      x:Name="ObjSonicIconsOption"       IsCheckable="True" IsChecked="False"/>
                 <MenuItem Header="Load Custom Icons"  Click="ObjCustomIconsToggle"     x:Name="ObjCustomIconsOption"      IsCheckable="True" IsChecked="False"/>
+                <Separator/>
+                <MenuItem Header="Order by Points"    Click="ObjPointsOrderToggle"     x:Name="ObjPointsOrderOption"     IsCheckable="True" IsChecked="False"/>
             </MenuItem>
             <!--MenuItem Header="Image Visuals" Focusable="False">
                 <MenuItem Header="Simple Icon Style"  Click="TelevoIconsToggle"     x:Name="TelevoIconsOption"      IsCheckable="True" IsChecked="True"/>
